k8s/apps/code-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  labels:
    app: code-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: code-server
          image: ghcr.io/walnuts1018/code-server-images-golang:bd1eb2cf6047428667e578539bb6fc72f07491b2-13
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - name: config
              mountPath: /home/coder/.config
            - name: work
              mountPath: /home/coder/work
            - name: local
              mountPath: /home/coder/.local
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: code-server-config
        - name: work
          persistentVolumeClaim:
            claimName: code-server-work
        - name: local
          persistentVolumeClaim:
            claimName: code-server-local
