k8s/apps/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  labels:
    app: code-server
spec:
  ports:
    - name: http
      port: 19200
      targetPort: 19200
  selector:
    app: code-server
  type: ClusterIP
