k8s/apps/code-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
spec:
  ingressClassName: "nginx"
  rules:
    - host: "code.walnuts.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 19200
